--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -26,17 +26,13 @@
                 android:layout_centerHorizontal="true"/>
 
             <TextView
+                style="@style/AppTheme.Label"
                 android:id="@+id/label_alsoknown"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/detail_also_known_as_label"
-                android:textStyle="bold"
-                android:textColor="#000"
-                android:textSize="18sp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/image_iv"
-                android:padding="3dp"/>
+                />
 
             <TextView
                 android:id="@+id/also_known_tv"
@@ -53,18 +49,13 @@
                 android:textColorHint="#000"/>
 
             <TextView
+                style="@style/AppTheme.Label"
                 android:id="@+id/label_orign_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/detail_place_of_origin_label"
-                android:textStyle="bold"
-                android:textColor="#000"
-                android:textSize="18sp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/also_known_tv"
-                android:layout_marginTop="10dp"
-                android:padding="3dp"/>
+                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:id="@+id/origin_tv"
@@ -83,18 +74,13 @@
 
 
             <TextView
+                style="@style/AppTheme.Label"
                 android:id="@+id/label_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/detail_description_label"
-                android:textStyle="bold"
-                android:textColor="#000"
-                android:textSize="18sp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/origin_tv"
-                android:layout_marginTop="10dp"
-                android:padding="3dp"/>
+                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:id="@+id/description_tv"
@@ -111,18 +97,13 @@
 
 
             <TextView
+                style="@style/AppTheme.Label"
                 android:id="@+id/label_ingredients"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/detail_ingredients_label"
-                android:textStyle="bold"
-                android:textColor="#000"
-                android:textSize="18sp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/description_tv"
-                android:layout_marginTop="10dp"
-                android:padding="3dp"/>
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:id="@+id/ingredients_tv"
